# cookiecutter-taskipy

./: README.md  cookiecutter.json
{{ cookiecutter.project_name }}/: pyproject.toml
{{ cookiecutter.project_name }}/.github/workflows/: testing.yml
