[project.optional-dependencies]
dev = [
    "taskipy",
    "autoflake",
    "pyupgrade",
    "black",
    "isort",
    "pytest",
    "pytest-randomly",
    "flake8",
    "mypy",
]

[tool.taskipy.tasks]
pre_test = "task format"
test = "pytest -v"
post_test = "task check"
format = "task format_autoflake && task format_pyupgrade && task format_black && task format_isort"
format_autoflake = "autoflake --in-place --remove-all-unused-imports $(find {{ cookiecutter.package_root_dir_name }} tests -name '*.py') setup.py"
format_pyupgrade = "pyupgrade $(find {{ cookiecutter.package_root_dir_name }} tests -name '*.py') setup.py"
format_black = "black -l {{ cookiecutter.line_length }} {{ cookiecutter.package_root_dir_name }} tests setup.py"
format_isort = "isort --profile black -l {{ cookiecutter.line_length }} {{ cookiecutter.package_root_dir_name }} tests setup.py"
check = "task check_flake8 && task check_mypy"
check_flake8 = "flake8 {{ cookiecutter.package_root_dir_name }} tests"
check_mypy = "mypy {{ cookiecutter.package_root_dir_name }} tests"
